ESC-13 Use embedded container for testing
* Define pluginManagement section to centralize configuration of
Maven plugins.