@@ -93,32 +93,39 @@
    </distributionManagement>
 
    <properties>
-      <version.scala.minor>2.9</version.scala.minor>
-      <version.scala>${version.scala.minor}.2</version.scala>
-      <version.scala.artifactId>${version.scala}</version.scala.artifactId>
-
-      <version.scalatest>1.9.1</version.scalatest>
-
-      <!-- Commit hash: 8c80b1a233abc6b91ecf6d26bac9d13f6639d64c -->
-      <version.jboss.as>7.x.incremental.546</version.jboss.as>
-      <!--<version.jboss.as>7.2.0.Alpha1-SNAPSHOT</version.jboss.as>-->
-
-      <version.jboss.logging>3.1.0.GA</version.jboss.logging>
-      <version.junit>4.8.2</version.junit>
-      <!--<version.scala.tools>3.0.2.1</version.scala.tools>-->
-      <version.scala.tools>3.1.3</version.scala.tools>
-      <version.arquillian>1.0.1.Final</version.arquillian>
-      <version.shrinkwrap.resolver>1.1.0-alpha-3</version.shrinkwrap.resolver>
-      <version.lift>2.5-M4</version.lift>
       <version.apache.maven>3.0.4</version.apache.maven>
       <version.apache.wagon>1.0</version.apache.wagon>
-      <version.sonatype.aether>1.13.1</version.sonatype.aether>
+      <version.arquillian>1.0.1.Final</version.arquillian>
+      <version.javax.persistence>1.0.1.Final</version.javax.persistence>
+      <!-- Commit hash: 84ce0a021e3c8e909cf7f50328938bda3db9edd7 -->
+      <version.jboss.as>7.x.incremental.667</version.jboss.as>
+      <!--<version.jboss.as>7.2.0.Alpha1-SNAPSHOT</version.jboss.as>-->
+      <version.jboss.logging>3.1.0.GA</version.jboss.logging>
+      <version.junit>4.8.2</version.junit>
+      <version.lift>2.5-M4</version.lift>
       <version.selenium>2.21.0</version.selenium>
-      <version.maven.source>2.1.2</version.maven.source>
+      <version.scala>${version.scala.minor}.2</version.scala>
+      <version.scala.minor>2.9</version.scala.minor>
+      <version.scala.artifactId>${version.scala}</version.scala.artifactId>
+      <!--<version.scala.tools>3.0.2.1</version.scala.tools>-->
+      <version.scala.tools>3.1.3</version.scala.tools>
+      <version.scalatest>1.9.1</version.scalatest>
+      <version.scalajpa>1.4</version.scalajpa>
+      <version.shrinkwrap.resolver>1.1.0-alpha-3</version.shrinkwrap.resolver>
       <!-- Keep Snake Yaml version in synch with what AS uses -->
       <version.snakeyaml>1.8</version.snakeyaml>
-      <version.javax.persistence>1.0.1.Final</version.javax.persistence>
-      <version.scalajpa>1.4</version.scalajpa>
+      <version.sonatype.aether>1.13.1</version.sonatype.aether>
+      <version.xnio>3.0.7.GA</version.xnio>
+
+      <version.plugin.maven.surefire>2.12</version.plugin.maven.surefire>
+      <version.plugin.maven.source>2.1.2</version.plugin.maven.source>
+      <version.plugin.maven.dependency>2.1</version.plugin.maven.dependency>
+      <version.plugin.maven.resources>2.4.2</version.plugin.maven.resources>
+      <version.plugin.maven.tattletale>1.1.0.Final</version.plugin.maven.tattletale>
+      <version.plugin.maven.jar>2.4</version.plugin.maven.jar>
+      <version.plugin.maven.invoker>1.8</version.plugin.maven.invoker>
+      <version.javax.validation>1.0.0.GA</version.javax.validation>
+      <version.javax.transaction>1.0.1.Final</version.javax.transaction>
    </properties>
 
    <modules>
@@ -209,18 +216,6 @@
             <version>${project.version}</version>
             <type>test-jar</type>
          </dependency>
-         <!--<dependency>-->
-            <!--<groupId>${project.groupId}</groupId>-->
-            <!--<artifactId>escalante-test-lift24-scala29</artifactId>-->
-            <!--<version>${project.version}</version>-->
-            <!--<type>test-jar</type>-->
-         <!--</dependency>-->
-         <!--<dependency>-->
-            <!--<groupId>${project.groupId}</groupId>-->
-            <!--<artifactId>escalante-test-lift24-scala28</artifactId>-->
-            <!--<version>${project.version}</version>-->
-            <!--<type>test-jar</type>-->
-         <!--</dependency>-->
 
          <dependency>
             <groupId>org.scalatest</groupId>
@@ -374,13 +369,17 @@
             <artifactId>jboss-as-arquillian-container-embedded</artifactId>
             <version>${version.jboss.as}</version>
          </dependency>
+         <dependency>
+            <groupId>org.jboss.xnio</groupId>
+            <artifactId>xnio-api</artifactId>
+            <version>${version.xnio}</version>
+         </dependency>
 
          <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-api</artifactId>
             <version>${version.shrinkwrap.resolver}</version>
          </dependency>
-
          <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-api-maven</artifactId>
@@ -457,9 +456,173 @@
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>${version.javax.persistence}</version>
          </dependency>
+         <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${version.javax.validation}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+            <version>${version.javax.transaction}</version>
+         </dependency>
 
       </dependencies>
    </dependencyManagement>
+
+   <build>
+      <pluginManagement>
+         <plugins>
+            <plugin>
+               <groupId>net.alchim31.maven</groupId>
+               <artifactId>scala-maven-plugin</artifactId>
+               <version>${version.scala.tools}</version>
+               <executions>
+                  <execution>
+                     <goals>
+                        <goal>compile</goal>
+                        <goal>testCompile</goal>
+                     </goals>
+                  </execution>
+               </executions>
+               <configuration>
+                  <scalaVersion>${version.scala}</scalaVersion>
+               </configuration>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>${version.plugin.maven.surefire}</version>
+               <configuration>
+                  <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.util.logging.manager=org.jboss.logmanager.LogManager</argLine>
+                  <!--<debugForkedProcess>true</debugForkedProcess>-->
+                  <systemProperties>
+                     <property>
+                        <name>surefire.basedir</name>
+                        <value>${basedir}/../../../../../</value>
+                     </property>
+                  </systemProperties>
+               </configuration>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-jar-plugin</artifactId>
+               <version>${version.plugin.maven.jar}</version>
+               <executions>
+                  <execution>
+                     <id>build-test-jar</id>
+                     <goals>
+                        <goal>test-jar</goal>
+                     </goals>
+                  </execution>
+               </executions>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-invoker-plugin</artifactId>
+               <version>${version.plugin.maven.invoker}</version>
+               <configuration>
+                  <addTestClassPath>true</addTestClassPath>
+                  <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+                  <pomIncludes>
+                     <pomInclude>*/pom.xml</pomInclude>
+                  </pomIncludes>
+                  <postBuildHookScript>verify</postBuildHookScript>
+                  <goals>
+                     <goal>clean</goal>
+                     <goal>install</goal>
+                  </goals>
+               </configuration>
+               <executions>
+                  <execution>
+                     <id>integration-test</id>
+                     <goals>
+                        <goal>install</goal>
+                        <goal>run</goal>
+                     </goals>
+                  </execution>
+               </executions>
+            </plugin>
+
+            <!-- Plugins for Tattletale -->
+            <plugin>
+               <!-- Tattletale is expecting a folder with jars in it,
+                    so I need to gather those together -->
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-dependency-plugin</artifactId>
+               <version>${version.plugin.maven.dependency}</version>
+               <executions>
+                  <execution>
+                     <id>copy-dependency-jars-to-tattletale-source-directory</id>
+                     <phase>pre-site</phase>
+                     <goals>
+                        <goal>copy-dependencies</goal>
+                     </goals>
+                     <configuration>
+                        <outputDirectory>${tt.src.dir}</outputDirectory>
+                     </configuration>
+                  </execution>
+               </executions>
+            </plugin>
+            <plugin>
+               <!-- ... gather up the last jars -->
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <version>${version.plugin.maven.resources}</version>
+               <executions>
+                  <execution>
+                     <id>copy-project-jar-and-java-rt-jar-to-tattletale-source-directory</id>
+                     <phase>pre-site</phase>
+                     <goals>
+                        <goal>copy-resources</goal>
+                     </goals>
+                     <configuration>
+                        <outputDirectory>${tt.src.dir}</outputDirectory>
+                        <resources>
+                           <resource>
+                              <directory>${project.build.directory}</directory>
+                              <filtering>false</filtering>
+                              <includes>
+                                 <include>${project.build.finalName}.jar</include>
+                              </includes>
+                           </resource>
+                           <resource>
+                              <directory>${java.home}/lib</directory>
+                              <filtering>false</filtering>
+                              <includes>
+                                 <include>rt.jar</include>
+                              </includes>
+                           </resource>
+                        </resources>
+                     </configuration>
+                  </execution>
+               </executions>
+            </plugin>
+            <plugin>
+               <groupId>org.jboss.tattletale</groupId>
+               <artifactId>tattletale-maven</artifactId>
+               <version>${version.plugin.maven.tattletale}</version>
+               <executions>
+                  <execution>
+                     <id>run-tattletale-report</id>
+                     <!-- mvn clean package site -Dmaven.test.skip.exec=true -Dinvoker.skip=true -->
+                     <phase>site</phase>
+                     <goals>
+                        <goal>report</goal>
+                     </goals>
+                     <configuration>
+                        <source>${tt.src.dir}</source>
+                        <destination>${tt.dst.dir}</destination>
+                        <profiles>
+                           <profile>java5</profile>
+                        </profiles>
+                     </configuration>
+                  </execution>
+               </executions>
+            </plugin>
+         </plugins>
+      </pluginManagement>
+   </build>
 
    <repositories>
       <repository>
